syntax = "proto3";

option go_package = "citizenmedia/auth";
package auth;

service AuthService {
    rpc SayHello (Empty) returns (HelloReply) {}
    rpc GenerateToken (GenerateTokenRequest) returns (GenerateTokenResponse) {}
    rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message JwtContent {
    string id = 1;
    string mail = 2;
    string name = 3;
}

message Empty {}
message HelloReply {
    string message = 1;
}

message GenerateTokenRequest {
    string id = 1;
    string mail = 2;
    string name = 3;
}
message GenerateTokenResponse {
    string message = 1;
    string token = 2;
}

message VerifyTokenRequest {
    string token = 1;
}
message VerifyTokenResponse {
    string message = 1;
    JwtContent jwt_content = 2;
}
